# GiocoBertoniSgatni

./: README.md  pyproject.toml  pyproject.toml.txt  resources.py
src/giocobertonisgatni/: __init__.py  appuntini.txt  momo.py  record.txt
src/templar's trial/: __init__.py
src/templars_trial/: __init__.py  momo.py  resources.py
