[project]
name = "templars_trial"
version = "0.1.0"
description = "Templars_Trial è un videogioco 2D top-down sviluppato interamente da zero, in cui vestirai i panni di un cavaliere templare alle prese con tre ambientazioni"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
templar's trial = "templars_trial:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
