[project]
name = "templars_trial"
version = "0.2.0"
description = "Templars_Trial è un videogioco 2D top-down sviluppato interamente da zero, in cui vestirai i panni di un cavaliere templare alle prese con tre ambientazioni"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
    "platformdirs>=3.0.0",
]

[project.scripts]
templars_trial = "templars_trial:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

